--- a/yaprak/liste/liste-3-kolon.html
+++ b/yaprak/liste/liste-3-kolon.html
@@ -1,3 +1,38 @@
-<div class="grid">
-  test
+<div class="kap kap-orta kap-3">
+  <div class="dik">
+    [div - 1]
+  </div>
+  <div class="dik">
+    [div - 2]
+  </div>
+  <div class="dik">
+    [div - 3]
+  </div>
+  <div class="dik">
+    [div - 1]
+  </div>
+  <div class="dik">
+    [div - 2]
+  </div>
+  <div class="dik">
+    [div - 3]
+  </div>
+  <div class="dik">
+    [div - 1]
+  </div>
+  <div class="dik">
+    [div - 2]
+  </div>
+  <div class="dik">
+    [div - 3]
+  </div>
+  <div class="dik">
+    [div - 1]
+  </div>
+  <div class="dik">
+    [div - 2]
+  </div>
+  <div class="dik">
+    [div - 3]
+  </div>
 </div>
