--- a/dal/liste/liste-3-kolon.html
+++ b/dal/liste/liste-3-kolon.html
@@ -1,38 +1,38 @@
-<div class="kap kap-orta kap-3">
-  <div class="dik">
+<div class="kap-3">
+  <div class="direk">
     [div - 1]
   </div>
-  <div class="dik">
+  <div class="direk">
     [div - 2]
   </div>
-  <div class="dik">
+  <div class="direk">
     [div - 3]
   </div>
-  <div class="dik">
+  <div class="direk">
     [div - 1]
   </div>
-  <div class="dik">
+  <div class="direk">
     [div - 2]
   </div>
-  <div class="dik">
+  <div class="direk">
     [div - 3]
   </div>
-  <div class="dik">
+  <div class="direk">
     [div - 1]
   </div>
-  <div class="dik">
+  <div class="direk">
     [div - 2]
   </div>
-  <div class="dik">
+  <div class="direk">
     [div - 3]
   </div>
-  <div class="dik">
+  <div class="direk">
     [div - 1]
   </div>
-  <div class="dik">
+  <div class="direk">
     [div - 2]
   </div>
-  <div class="dik">
+  <div class="direk">
     [div - 3]
   </div>
 </div>
