--- a/dal/liste/liste-3-kolon.html
+++ b/dal/liste/liste-3-kolon.html
@@ -1,38 +1,74 @@
 <div class="kap-3">
   <div class="direk">
-    [div - 1]
+    [div1]
   </div>
   <div class="direk">
-    [div - 2]
+    [div2]
   </div>
   <div class="direk">
-    [div - 3]
+    [div3]
   </div>
   <div class="direk">
-    [div - 1]
+    [div4]
   </div>
   <div class="direk">
-    [div - 2]
+    [div5]
   </div>
   <div class="direk">
-    [div - 3]
+    [div6]
   </div>
   <div class="direk">
-    [div - 1]
+    [div7]
   </div>
   <div class="direk">
-    [div - 2]
+    [div8]
   </div>
   <div class="direk">
-    [div - 3]
+    [div9]
   </div>
   <div class="direk">
-    [div - 1]
+    [div10]
   </div>
   <div class="direk">
-    [div - 2]
+    [div11]
   </div>
   <div class="direk">
-    [div - 3]
+    [div12]
+  </div>
+  <div class="direk">
+    [div13]
+  </div>
+  <div class="direk">
+    [div14]
+  </div>
+  <div class="direk">
+    [div15]
+  </div>
+  <div class="direk">
+    [div16]
+  </div>
+  <div class="direk">
+    [div17]
+  </div>
+  <div class="direk">
+    [div18]
+  </div>
+  <div class="direk">
+    [div19]
+  </div>
+  <div class="direk">
+    [div20]
+  </div>
+  <div class="direk">
+    [div21]
+  </div>
+  <div class="direk">
+    [div22]
+  </div>
+  <div class="direk">
+    [div23]
+  </div>
+  <div class="direk">
+    [div24]
   </div>
 </div>
