--- a/dal/liste/liste-3-direk.html
+++ b/dal/liste/liste-3-direk.html
@@ -1,74 +1,74 @@
-<div class="kap-3">
-  <div class="direk">
+<div class="kap-12">
+  <div class="kap-1">
     [div1]
   </div>
-  <div class="direk">
+  <div class="kap-4">
     [div2]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div3]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div4]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div5]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div6]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div7]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div8]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div9]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div10]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div11]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div12]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div13]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div14]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div15]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div16]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div17]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div18]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div19]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div20]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div21]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div22]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div23]
   </div>
-  <div class="direk">
+  <div class="kap">
     [div24]
   </div>
 </div>
