Ekran ölçeklerine göre ayarlar ekledik.

--- a/dal/liste/liste-genel.html
+++ b/dal/liste/liste-genel.html
@@ -1,8 +1,8 @@
-<div class="kap-0">
-  <div class="kap-1">
+<div class="kap-5_sm-1">
+  <div class="kap-0_sm-2">
     [div1]
   </div>
-  <div class="kap-3">
+  <div class="kap-0_sm-2">
     [div2]
   </div>
   <div class="kap-0-merkez">
