--- a/dal/liste/liste-genel.html
+++ b/dal/liste/liste-genel.html
@@ -1,11 +1,16 @@
-<div class="kap-5_sm-1">
-  <div class="kap-0_sm-2">
+<div class="">
+  <h1>Kap Örgüsü</h1>
+  <p>Dış sınıf "kap-6". İç sınıf "kap-0". "kap-0" her zaman boş değerdedir. Eğer dış değer varsa onun değerini alır. "kap-0" yerine 0~24 arasında bir sayı yazılırsa girilen sayıya göre sayfayı böler ve tek başına değer alır. </p>
+<p>Ekran ölçekleri için _xs-? _sm-? _md-? _lg-? değerleri istenilen "kap-?" sınıfıyla birlikte eklenerek yazılabilir. ? görülen yere 0~24 değerleri girilebilir.</p>
+</div>
+<div class="kap-5_lg-4_md-3_sm-2_xs-1">
+  <div class="kap-0">
     [div1]
   </div>
-  <div class="kap-0_sm-2">
+  <div class="kap-0">
     [div2]
   </div>
-  <div class="kap-0-merkez">
+  <div class="kap-0">
     [div3]
   </div>
   <div class="kap-0">
