--- a/dal/liste/liste-genel.html
+++ b/dal/liste/liste-genel.html
@@ -3,9 +3,25 @@
   <p>Dış sınıf "kap-6". İç sınıf "kap-0". "kap-0" her zaman boş değerdedir. Eğer dış değer varsa onun değerini alır. "kap-0" yerine 0~24 arasında bir sayı yazılırsa girilen sayıya göre sayfayı böler ve tek başına değer alır. </p>
 <p>Ekran ölçekleri için _xs-? _sm-? _md-? _lg-? değerleri istenilen "kap-?" sınıfıyla birlikte eklenerek yazılabilir. ? görülen yere 0~24 değerleri girilebilir.</p>
 </div>
-<div class="kap-5_lg-4_md-3_sm-2_xs-1">
-  <div class="kap-0">
-    [div1]
+<div class="kap-2_lg-4_md-3_sm-2_xs-1">
+  <div class="kap-1">
+    <div class="kap-5">
+      [div0]
+    </div>
+    <div class="kap-doldur">
+      [div1]
+    </div>
+  </div>
+  <div class="kap-1">
+    <div class="kap-5">
+      [div0]
+    </div>
+    <div class="kap-doldur">
+      [div1]
+    </div>
+    <div class="kap-5">
+      [div0]
+    </div>
   </div>
   <div class="kap-0">
     [div2]
