Kap örgüsü geliştirildi. p: parça b: bölme

--- a/dal/liste/liste-genel.html
+++ b/dal/liste/liste-genel.html
@@ -1,95 +1,63 @@
-<div class="">
+<div>
   <h1>Kap Örgüsü</h1>
   <p>Dış sınıf "kap-6". İç sınıf "kap-0". "kap-0" her zaman boş değerdedir. Eğer dış değer varsa onun değerini alır. "kap-0" yerine 0~24 arasında bir sayı yazılırsa girilen sayıya göre sayfayı böler ve tek başına değer alır. </p>
 <p>Ekran ölçekleri için _xs-? _sm-? _md-? _lg-? değerleri istenilen "kap-?" sınıfıyla birlikte eklenerek yazılabilir. ? görülen yere 0~24 değerleri girilebilir.</p>
 </div>
-<div class="kap-2_lg-4_md-3_sm-2_xs-1">
-  <div class="kap-1">
-    <div class="kap-5">
-      [div0]
-    </div>
-    <div class="kap-doldur">
-      [div1]
-    </div>
-  </div>
-  <div class="kap-1">
-    <div class="kap-5">
-      [div0]
-    </div>
-    <div class="kap-doldur">
-      [div1]
-    </div>
-    <div class="kap-5">
-      [div0]
-    </div>
-  </div>
-  <div class="kap-0">
-    [div2]
-  </div>
-  <div class="kap-0">
-    [div3]
-  </div>
-  <div class="kap-0">
-    [div4]
-  </div>
-  <div class="kap-0">
-    [div5]
-  </div>
-  <div class="kap-0">
-    [div6]
-  </div>
-  <div class="kap-0">
-    [div7]
-  </div>
-  <div class="kap-0">
-    [div8]
-  </div>
-  <div class="kap-0">
-    [div9]
-  </div>
-  <div class="kap-0">
-    [div10]
-  </div>
-  <div class="kap-0">
-    [div11]
-  </div>
-  <div class="kap-0">
-    [div12]
-  </div>
-  <div class="kap-0">
-    [div13]
-  </div>
-  <div class="kap-0">
-    [div14]
-  </div>
-  <div class="kap-0">
-    [div15]
-  </div>
-  <div class="kap-0">
-    [div16]
-  </div>
-  <div class="kap-0">
-    [div17]
-  </div>
-  <div class="kap-0">
-    [div18]
-  </div>
-  <div class="kap-0">
-    [div19]
-  </div>
-  <div class="kap-0">
-    [div20]
-  </div>
-  <div class="kap-0">
-    [div21]
-  </div>
-  <div class="kap-0">
-    [div22]
-  </div>
-  <div class="kap-0">
-    [div23]
-  </div>
-  <div class="kap-0">
-    [div24]
-  </div>
+<div class="kap-8b_lg-5b_md-3b_sm-2b_xs-1b">
+  <div class="kap-0p_md-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
+  <div class="kap-0p">    div  </div>
 </div>
