--- a/toprak/head.html
+++ b/toprak/head.html
@@ -8,7 +8,7 @@
   	<title>Başlık</title>
 
   	<!-- Kök -->
-  	<link href="http://localhost/deveb/assets/css/deveb.css" rel="stylesheet">
+  	<link href="http://localhost/deveb/assets/css/deveb.alfa.css" rel="stylesheet">
 
   	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
