Bazı denemeler sonrası güncelleme.

--- a/dal/liste/liste-genel.html
+++ b/dal/liste/liste-genel.html
@@ -1,63 +1,63 @@
 <div>
   <h1>Kap Örgüsü</h1>
-  <p>Dış sınıf "kap-6". İç sınıf "kap-0". "kap-0" her zaman boş değerdedir. Eğer dış değer varsa onun değerini alır. "kap-0" yerine 0~24 arasında bir sayı yazılırsa girilen sayıya göre sayfayı böler ve tek başına değer alır. </p>
-<p>Ekran ölçekleri için _xs-? _sm-? _md-? _lg-? değerleri istenilen "kap-?" sınıfıyla birlikte eklenerek yazılabilir. ? görülen yere 0~24 değerleri girilebilir.</p>
+  <p>Kap örgüsü iki ana yöntemle kullanılır. Display:flex yoluyla kurgulanmıştır.<br>Her zaman flex yönteminin özelliklerinden daha fazla yararlanılmak isteniyorsa bir kapsayıcı "kap-" sınıfı oluşturularak yapılır.<br>Örneğin en dışkap-0petiketi kapsayıcı olarak ayarlanır. İçindeki nesneler kapsayıcıya göre durum alırlar. Kapsayıcı iç nesnelere etki etmek için bölüm tanımlaması yapar. Kısaltması "b" harfidir. Örneğin 5 sütundan oluşan bir yapı isteniyorsa kapsayıcıya kap-5b sınıfı yazılır. Diğer genişlikteki ekranlar lg, md, sm, xs olmak üzere yazılabilir. Örnek yazım şöyledir. kap-6b_lg-5b_md-4b_sm-3b_xs-2b </p>
 </div>
-<div class="kap-8b_lg-5b_md-3b_sm-2b_xs-1b">
-  <div class="kap-0p_md-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
-  <div class="kap-0p">    div  </div>
+<div class="kap-6b_lg-5b_md-4b_sm-3b_xs-2b kap-12p">
+  <div class="kap-0p_md-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+  <div class="kap-0p">   kap-0p </div>
+    <div class="kap-doldur">    kap-doldur  </div>
 </div>
