--- a/dal/liste/liste-genel.html
+++ b/dal/liste/liste-genel.html
@@ -2,7 +2,7 @@
   <h1>Kap Örgüsü</h1>
   <p>Kap örgüsü iki ana yöntemle kullanılır. Display:flex yoluyla kurgulanmıştır.<br>Her zaman flex yönteminin özelliklerinden daha fazla yararlanılmak isteniyorsa bir kapsayıcı "kap-" sınıfı oluşturularak yapılır.<br>Örneğin en dışkap-0petiketi kapsayıcı olarak ayarlanır. İçindeki nesneler kapsayıcıya göre durum alırlar. Kapsayıcı iç nesnelere etki etmek için bölüm tanımlaması yapar. Kısaltması "b" harfidir. Örneğin 5 sütundan oluşan bir yapı isteniyorsa kapsayıcıya kap-5b sınıfı yazılır. Diğer genişlikteki ekranlar lg, md, sm, xs olmak üzere yazılabilir. Örnek yazım şöyledir. kap-6b_lg-5b_md-4b_sm-3b_xs-2b </p>
 </div>
-<div class="kap-6b_lg-5b_md-4b_sm-3b_xs-2b kap-12p">
+<div class="kap-6b_lg-5b_md-4b_sm-3b_xs-2b">
   <div class="kap-0p_lg-2p24">   kap-0p </div>
   <div class="kap-0p">   kap-0p </div>
   <div class="kap-0p">   kap-0p </div>
