--- a/dal/liste/liste-genel0.html
+++ b/dal/liste/liste-genel0.html
@@ -1,9 +1,17 @@
 <div>
   <h1>Kap Örgüsü</h1>
-  <p>Kap örgüsü iki ana yöntemle kullanılır. Display:flex yoluyla kurgulanmıştır.<br>Her zaman flex yönteminin özelliklerinden daha fazla yararlanılmak isteniyorsa bir kapsayıcı "kap-" sınıfı oluşturularak yapılır.<br>Örneğin en dış1etiketi kapsayıcı olarak ayarlanır. İçindeki nesneler kapsayıcıya göre durum alırlar. Kapsayıcı iç nesnelere etki etmek için bölüm tanımlaması yapar. Kısaltması "b" harfidir. Örneğin 5 sütundan oluşan bir yapı isteniyorsa kapsayıcıya kap-5b sınıfı yazılır. Diğer genişlikteki ekranlar lg, md, sm, xs olmak üzere yazılabilir. Örnek yazım şöyledir. kap-6b_lg-5b_md-4b_sm-3b_xs-2b </p>
 </div>
-<div class="kap-eb kap-0b_sm-4b">
-  <div class="kap-0p">   1234567 as </div>
+<div class="kap-5b_byk-4b_ort-eb_kçk-3b">
+
+<div class="kap-24-24p">
+  <div class="kap-1o beri-5">   1 </div>
+
+  <div class="kap-10o beri-5">   10</div>
+</div>
+  <div class="kap-1-10p">   1 </div>
+  <div class="kap-3-10p">   1 </div>
+  <div class="kap-3-10p">   1 </div>
+  <div class="kap-3-10p">   1 </div>
   <div class="kap-0p">   1 </div>
   <div class="kap-0p">   1 </div>
   <div class="kap-0p">   1 </div>
@@ -51,13 +59,4 @@
   <div class="kap-0p">   1 </div>
   <div class="kap-0p">   1 </div>
   <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-doldur">    kap-doldur  </div>
 </div>
