--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<a href="yaprak/liste/liste-genel.php">Genel liste düzeni</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Deveb Önyüz İskeleti</title>
+  </head>
+  <body>
+    <a href="belgeler/kap-orgusu.php">Kap örgüsü</a>
+    <a href="yaprak/liste/liste-genel0.php">Liste genel #0</a>
+  </body>
+</html>
