--- a/toprak/head.html
+++ b/toprak/head.html
@@ -5,9 +5,10 @@
   	<meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
   	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  	<title>Başlık</title>
+  	<title>Deveb Önyüz İskeleti</title>
 
   	<!-- Kök -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   	<link href="http://localhost/deveb/assets/css/deveb.alfa.css" rel="stylesheet">
 
   	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
