--- a/dal/liste/liste-genel0.html
+++ b/dal/liste/liste-genel0.html
@@ -1,62 +1,62 @@
 <div>
   <h1>Kap Örgüsü</h1>
 </div>
-<div class="kap-5b_byk-4b_ort-eb_kçk-3b">
+<div class="kap_gnl-5b_byk-4b_ort-eb_kçk-3b">
 
-<div class="kap-24-24p">
-  <div class="kap-1o beri-5">   1 </div>
+<div class="kap_gnl-24-24p">
+  <div class="kap_gnl-1o beri-5">   1 </div>
 
-  <div class="kap-10o beri-5">   10</div>
+  <div class="kap_gnl-10o beri-5">   10</div>
 </div>
-  <div class="kap-1-10p">   1 </div>
-  <div class="kap-3-10p">   1 </div>
-  <div class="kap-3-10p">   1 </div>
-  <div class="kap-3-10p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
-  <div class="kap-0p">   1 </div>
+  <div class="kap_gnl-1-10p">   1 </div>
+  <div class="kap_gnl-3-10p">   1 </div>
+  <div class="kap_gnl-3-10p">   1 </div>
+  <div class="kap_gnl-3-10p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
+  <div class="kap_gnl-0p">   1 </div>
 </div>
