--- a/dal/liste/liste-genel0.html
+++ b/dal/liste/liste-genel0.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="taşma-gizli">
-  <div class="kap_gnl-8b_byk-4b_ort-eb_kçk-3b arala-1 sonkenar-1">
+  <div class="kap_gnl-8b_byk-4b_ort-eb_kçk-3b arala-1 dışkenar-0">
     <div class="kap_gnl-1-10p">  <div class="deneme-kutu">1</div></div>
     <div class="kap_gnl-3-10p">  <div class="deneme-kutu">1</div></div>
     <div class="kap_gnl-3-10p">  <div class="deneme-kutu">1</div></div>
@@ -57,3 +57,18 @@
     <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
   </div>
 </div>
+
+
+
+  <div class="kap_gnl-1b_gnl-4m">
+    <img class="kap_gnl-0p" src="http://placehold.it/100x100">
+    <img class="kap_gnl-0p" src="http://placehold.it/100x200">
+    <img class="kap_gnl-0p" src="http://placehold.it/200x100">
+    <img class="kap_gnl-0p" src="http://placehold.it/100x300">
+    <img class="kap_gnl-0p" src="http://placehold.it/300x100">
+    <img class="kap_gnl-0p" src="http://placehold.it/100x100">
+    <img class="kap_gnl-0p" src="http://placehold.it/100x100">
+    <img class="kap_gnl-0p" src="http://placehold.it/100x100">
+    <img class="kap_gnl-0p" src="http://placehold.it/100x100">
+
+  </div>
