--- a/toprak/head.html
+++ b/toprak/head.html
@@ -9,7 +9,7 @@
 
   	<!-- Kök -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  	<link href="http://localhost/deveb/assets/css/deveb.ilkel.css" rel="stylesheet">
+  	<link href="/deveb/assets/css/deveb.ilkel.css" rel="stylesheet">
 
   	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
