Belge örneği geliştirildi.

--- a/dal/liste/liste-genel0.html
+++ b/dal/liste/liste-genel0.html
@@ -8,7 +8,7 @@
     <div class="kap_gnl-3-10p">  <div class="deneme-kutu">1</div></div>
     <div class="kap_gnl-3-10p">  <div class="deneme-kutu">1</div></div>
     <div class="kap_gnl-3-10p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
+    <div class="kap_gnl-0p">  <div class="deneme-kutu">1<br>1</div></div>
     <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
     <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
     <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
@@ -57,18 +57,3 @@
     <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
   </div>
 </div>
-
-
-
-  <div class="kap_gnl-1b_gnl-4m">
-    <img class="kap_gnl-0p" src="http://placehold.it/100x100">
-    <img class="kap_gnl-0p" src="http://placehold.it/100x200">
-    <img class="kap_gnl-0p" src="http://placehold.it/200x100">
-    <img class="kap_gnl-0p" src="http://placehold.it/100x300">
-    <img class="kap_gnl-0p" src="http://placehold.it/300x100">
-    <img class="kap_gnl-0p" src="http://placehold.it/100x100">
-    <img class="kap_gnl-0p" src="http://placehold.it/100x100">
-    <img class="kap_gnl-0p" src="http://placehold.it/100x100">
-    <img class="kap_gnl-0p" src="http://placehold.it/100x100">
-
-  </div>
