--- a/toprak/head.html
+++ b/toprak/head.html
@@ -9,6 +9,7 @@
 
   	<!-- Kök -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="/deveb/assets/css/font-awesome.min.css">
   	<link href="/deveb/assets/css/deveb.ilkel.css" rel="stylesheet">
 
   	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
