İlkel Sürüm 2 temizleniyor.

--- a/dal/liste/liste-genel0.html
+++ b/dal/liste/liste-genel0.html
@@ -1,59 +1,41 @@
-<div>
-  <h1>Kap Örgüsü</h1>
+<div class="kap gnl-eb">
+  <div class="kap gnl-0p ufk-5-5p kutu-tipi">  1  </div>
+  <div class="kap gnl-0p kutu-tipi">  2  </div>
+  <div class="kap gnl-0p kutu-tipi">  3  </div>
+  <div class="kap gnl-0p kutu-tipi">  4  </div>
+  <div class="kap gnl-0p kutu-tipi">  5  </div>
+  <div class="kap gnl-0p kutu-tipi">  6  </div>
+  <div class="kap gnl-0p kutu-tipi">  7  </div>
+  <div class="kap gnl-0p kutu-tipi">  8  </div>
+  <div class="kap gnl-0p kutu-tipi">  9  </div>
 </div>
-
-<div class="taşma-gizli">
-  <div class="kap_gnl-8b_byk-4b_ort-eb_kçk-3b arala-1 dışkenar-0">
-    <div class="kap_gnl-1-10p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-3-10p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-3-10p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-3-10p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1<br>1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-    <div class="kap_gnl-0p">  <div class="deneme-kutu">1</div></div>
-  </div>
+<div class="kap gnl-eb">
+  <div class="kap gnl-0p kutu-tipi">  1  </div>
+  <div class="kap gnl-0p kutu-tipi">  2  </div>
+  <div class="kap gnl-0p kutu-tipi">  3  </div>
+  <div class="kap gnl-0p kutu-tipi">  4  </div>
+  <div class="kap gnl-0p kutu-tipi">  5  </div>
+  <div class="kap gnl-0p kutu-tipi">  6  </div>
+  <div class="kap gnl-0p kutu-tipi">  7  </div>
+</div>
+<div class="kap gnl-eb">
+  <div class="kap gnl-0p kutu-tipi">  1  </div>
+  <div class="kap gnl-0p kutu-tipi">  2  </div>
+  <div class="kap gnl-0p kutu-tipi">  3  </div>
+  <div class="kap gnl-0p kutu-tipi">  4  </div>
+  <div class="kap gnl-0p kutu-tipi">  5  </div>
+</div>
+<div class="kap gnl-eb">
+  <div class="kap gnl-0p kutu-tipi">  1  </div>
+  <div class="kap gnl-0p kutu-tipi">  2  </div>
+  <div class="kap gnl-0p kutu-tipi">  3  </div>
+  <div class="kap gnl-0p kutu-tipi">  4  </div>
+  <div class="kap gnl-0p kutu-tipi">  5  </div>
+  <div class="kap gnl-0p kutu-tipi">  6  </div>
+  <div class="kap gnl-0p kutu-tipi">  7  </div>
+  <div class="kap gnl-0p kutu-tipi">  8  </div>
+  <div class="kap gnl-0p kutu-tipi">  9  </div>
+  <div class="kap gnl-0p kutu-tipi">  10  </div>
+  <div class="kap gnl-0p kutu-tipi">  11  </div>
+  <div class="kap gnl-0p kutu-tipi">  12  </div>
 </div>
