--- a/toprak/header.html
+++ b/toprak/header.html
@@ -1,12 +1,10 @@
-<div id="header" class="kap_gnl-5-5p-merkez ap-deveb beri-alt-1">
+<div id="header" class="kap_gnl-5-5p-merkez-ortalan ap-beyaz beri-alt-1 kenar-alt" style="height:60px;">
   <div class="kap_gnl-23-24p">
     <ul class="menü-genel">
       <li><a href="/deveb/belgeler/kap-orgusu.php">Kap Örgüsü</a></li>
-      <li><a href="/deveb/belgeler/kap-orgusu/ornekler.php">Örnekler</a></li>
+      <li><a href="/deveb/belgeler/kap-orgusu/olcekler.php">Kap Ölçekleri</a></li>
+      <li><a href="/deveb/belgeler/kap-orgusu/ornekler.php">Kap Örnekleri</a></li>
       <li><a href="/deveb/belgeler/takim.php">Takım</a></li>
-      <li><a href="#">Boş menü</a></li>
-      <li><a href="#">Boş menü</a></li>
-      <li><a href="#">Boş menü</a></li>
     </ul>
   </div>
 </div>
