--- a/dal/liste/liste-genel0.html
+++ b/dal/liste/liste-genel0.html
@@ -1,41 +1,43 @@
-<div class="kap gnl-eb">
-  <div class="kap gnl-0p ufk-5-5p kutu-tipi">  1  </div>
-  <div class="kap gnl-0p kutu-tipi">  2  </div>
-  <div class="kap gnl-0p kutu-tipi">  3  </div>
-  <div class="kap gnl-0p kutu-tipi">  4  </div>
-  <div class="kap gnl-0p kutu-tipi">  5  </div>
-  <div class="kap gnl-0p kutu-tipi">  6  </div>
-  <div class="kap gnl-0p kutu-tipi">  7  </div>
-  <div class="kap gnl-0p kutu-tipi">  8  </div>
-  <div class="kap gnl-0p kutu-tipi">  9  </div>
+<div class="kap ortalat">
+<div class="kap gnl-eb gnl-12-12p tersle">
+  <div class="kap gnl-0p byk-5-8p ort-9-12p ufk-3-5p">  <div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
 </div>
-<div class="kap gnl-eb">
-  <div class="kap gnl-0p kutu-tipi">  1  </div>
-  <div class="kap gnl-0p kutu-tipi">  2  </div>
-  <div class="kap gnl-0p kutu-tipi">  3  </div>
-  <div class="kap gnl-0p kutu-tipi">  4  </div>
-  <div class="kap gnl-0p kutu-tipi">  5  </div>
-  <div class="kap gnl-0p kutu-tipi">  6  </div>
-  <div class="kap gnl-0p kutu-tipi">  7  </div>
+<div class="kap gnl-eb gnl-12-12p">
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
 </div>
-<div class="kap gnl-eb">
-  <div class="kap gnl-0p kutu-tipi">  1  </div>
-  <div class="kap gnl-0p kutu-tipi">  2  </div>
-  <div class="kap gnl-0p kutu-tipi">  3  </div>
-  <div class="kap gnl-0p kutu-tipi">  4  </div>
-  <div class="kap gnl-0p kutu-tipi">  5  </div>
+<div class="kap gnl-eb gnl-12-12p">
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
 </div>
-<div class="kap gnl-eb">
-  <div class="kap gnl-0p kutu-tipi">  1  </div>
-  <div class="kap gnl-0p kutu-tipi">  2  </div>
-  <div class="kap gnl-0p kutu-tipi">  3  </div>
-  <div class="kap gnl-0p kutu-tipi">  4  </div>
-  <div class="kap gnl-0p kutu-tipi">  5  </div>
-  <div class="kap gnl-0p kutu-tipi">  6  </div>
-  <div class="kap gnl-0p kutu-tipi">  7  </div>
-  <div class="kap gnl-0p kutu-tipi">  8  </div>
-  <div class="kap gnl-0p kutu-tipi">  9  </div>
-  <div class="kap gnl-0p kutu-tipi">  10  </div>
-  <div class="kap gnl-0p kutu-tipi">  11  </div>
-  <div class="kap gnl-0p kutu-tipi">  12  </div>
+<div class="kap gnl-eb gnl-12-12p tersle">
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+  <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
+</div>
 </div>
