--- a/dal/liste/liste-genel0.html
+++ b/dal/liste/liste-genel0.html
@@ -40,4 +40,52 @@
   <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
   <div class="kap gnl-0p"><div class="kutu kutu-genel"><img src="http://placehold.it/100x100" alt="resim metni"></div></div>
 </div>
+<div class="kap ger gnl-6-6p gnl-son-5n byk-son-4n ort-son-3n kçk-son-2n ufk-son-1n ">
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+  <div class="kap gnl-2-16p"> 2-16p  </div>
+</div>
 </div>
