--- a/toprak/foot.html
+++ b/toprak/foot.html
@@ -1,2 +1,8 @@
+<div class="kap ortala merkez beri-2">
+  <ul class="menü-genel">
+    <li><a href="https://www.facebook.com/groups/1818283228485179/"> <i class="fa fa-facebook"></i> Facebook </a></li>
+    <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github"></i> Github </a></li>
+  </ul>
+</div>
 </body>
 </html>
