--- a/toprak/head.html
+++ b/toprak/head.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="/deveb/assets/css/font-awesome.min.css">
   	<link href="/deveb/assets/css/deveb.ilkel.s2.css" rel="stylesheet">
+    <link href="/deveb/assets/css/deveb.genel.css" rel="stylesheet">
 
   	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
