--- a/toprak/header.html
+++ b/toprak/header.html
@@ -1,5 +1,5 @@
-<div id="header" class="kap_gnl-5-5p-merkez-ortalan ap-beyaz beri-alt-1 kenar-alt" style="height:60px;">
-  <div class="kap_gnl-23-24p">
+<div id="header" class="kap gnl-5-5p ortala merkez ap-beyaz beri-alt-1 kenar-alt" style="height:60px;">
+  <div class="kap gnl-23-24p">
     <ul class="menü-genel">
       <li><a href="/deveb/belgeler/kap-orgusu.php">Kap Örgüsü</a></li>
       <li><a href="/deveb/belgeler/kap-orgusu/olcekler.php">Kap Ölçekleri</a></li>
