--- a/toprak/header.html
+++ b/toprak/header.html
@@ -1,10 +1,15 @@
-<div id="header" class="kap gnl-5-5p ortala merkez ap-beyaz beri-alt-1 kenar-alt" style="height:60px;">
-  <div class="kap gnl-23-24p">
-    <ul class="menü-genel">
+<div id="header" class="kap ortala merkez ap-beyaz beri-alt-1 kenar-alt" gnl="24p 24" style="height:60px;">
+  <div class="kap ger" gnl="24">
+    <ul class="menü-genel kap merkez">
+      <li><a href="/deveb/" class="logo">deveb</a></li>
+    </ul>
+    <ul class="menü-genel kap merkez">
       <li><a href="/deveb/belgeler/kap-orgusu.php">Kap Örgüsü</a></li>
       <li><a href="/deveb/belgeler/kap-orgusu/olcekler.php">Kap Ölçekleri</a></li>
-      <li><a href="/deveb/belgeler/kap-orgusu/ornekler.php">Kap Örnekleri</a></li>
+      <!--<li><a href="/deveb/belgeler/kap-orgusu/ornekler.php">Kap Örnekleri</a></li>-->
+      <li><a href="/deveb/belgeler/sekme-orgusu.php">Sekme Örgüsü</a></li>
       <li><a href="/deveb/belgeler/takim.php">Takım</a></li>
+      <li><a href="/deveb/belgeler/tarayici-destegi.php">Tarayıcı Desteği</a></li>
     </ul>
   </div>
 </div>
