--- a/toprak/head.html
+++ b/toprak/head.html
@@ -9,9 +9,12 @@
 
   	<!-- Kök -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet"> 
     <link rel="stylesheet" href="/deveb/assets/css/font-awesome.min.css">
-  	<link href="/deveb/assets/css/deveb.ilkel.s2.css" rel="stylesheet">
+  	<link href="/deveb/assets/css/deveb.ilkel.s3.css" rel="stylesheet">
+    <link href="/deveb/assets/css/ie/deveb.ilkel.ie.s1.css" rel="stylesheet">
     <link href="/deveb/assets/css/deveb.genel.css" rel="stylesheet">
+
 
   	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -19,5 +22,6 @@
   	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   	<![endif]-->
+
 </head>
 <body>
