Yan sekmelerle ilgili sorunlarımız çözüldü.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Deveb Önyüz İskeleti</title>
   </head>
   <body>
-    <a href="belgeler/kap-orgusu.php">Kap örgüsü</a>
-    <a href="yaprak/liste/liste-genel0.php">Liste genel #0</a>
+    Bir sorun var... Lütfen PHP dilini destekleyen bir düzlem içinde çalıştırınız.
   </body>
 </html>
