Renk örgüsü oluşturuldu.

--- a/toprak/header.html
+++ b/toprak/header.html
@@ -7,7 +7,8 @@
       <li><a href="/deveb/belgeler/kap-orgusu.php">Kap Örgüsü</a></li>
       <li><a href="/deveb/belgeler/kap-orgusu/olcekler.php">Kap Ölçekleri</a></li>
       <!--<li><a href="/deveb/belgeler/kap-orgusu/ornekler.php">Kap Örnekleri</a></li>-->
-      <li><a href="/deveb/belgeler/sekme-orgusu.php">Sekme Örgüsü</a></li>
+      <li><a href="/deveb/belgeler/sekme-orgusu.php">Sekme</a></li>
+      <li><a href="/deveb/belgeler/renk-orgusu.php">Renk</a></li>
       <li><a href="/deveb/belgeler/takim.php">Takım</a></li>
       <li><a href="/deveb/belgeler/tarayici-destegi.php">Tarayıcı Desteği</a></li>
     </ul>
