ek attr düzeltmeleri

--- a/toprak/foot.html
+++ b/toprak/foot.html
@@ -5,8 +5,8 @@
   </ul>
 </div>
 
-<div class="ortala" gnl="24 24p">
-  <div id="disqus_thread" gnl="23"></div>
+<div class="ortala" data-gnl="24 24p">
+  <div id="disqus_thread" data-gnl="23"></div>
   <script>
 
   /**
