--- a/toprak/head.html
+++ b/toprak/head.html
@@ -9,7 +9,7 @@
 
   	<!-- Kök -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
     <link rel="stylesheet" href="/deveb/assets/css/font-awesome.min.css">
   	<link href="/deveb/assets/css/deveb.ilkel.s3.css" rel="stylesheet">
     <link href="/deveb/assets/css/ie/deveb.ilkel.ie.s1.css" rel="stylesheet">
@@ -24,4 +24,4 @@
   	<![endif]-->
 
 </head>
-<body>
+<body class="kap ortala" >
