--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Deveb Önyüz İskeleti</title>
-  </head>
+  <link rel="import" href="toprak/head.html">
   <body>
-    Bir sorun var... Lütfen PHP dilini destekleyen bir düzlem içinde çalıştırınız.
+    Bir sorun var... Daha sonra deneyiniz.
   </body>
 </html>
