index.html güncelleme

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <link rel="import" href="toprak/head.html">
+  <link rel="import" href="/toprak/head.html">
   <body>
     Bir sorun var... Daha sonra deneyiniz.
   </body>
