--- a/index.html
+++ b/index.html
@@ -5,3 +5,15 @@
     Bir sorun var... Daha sonra deneyiniz.
   </body>
 </html>
+<!DOCTYPE html>
+<html>
+<script src="https://www.w3schools.com/lib/w3.js"></script>
+<div w3-include-html="/toprak/head.html"></div>
+<body>
+
+<script>
+w3.includeHTML();
+</script>
+
+</body>
+</html>
