--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <link rel="import" href="/toprak/head.html">
-  <body>
-    Bir sorun var... Daha sonra deneyiniz.
-  </body>
-</html>
-<!DOCTYPE html>
-<html>
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <div w3-include-html="/toprak/head.html"></div>
 <body>
-
+Yeni
 <script>
 w3.includeHTML();
 </script>
