--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<div w3-include-html="/toprak/head.html"></div>
-
-Yeni
+<!DOCTYPE html>
+<html lang="tr">
+<head w3-include-html="/toprak/head.html"></head>
+<body>
+Yeni body
 
 
 <script src="https://www.w3schools.com/lib/w3.js"></script>
