--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="tr">
-<head w3-include-html="/toprak/head.html"></head>
+<head w3-include-html="head.html"></head>
 <body>
-Yeni body
-
-
-<script src="https://www.w3schools.com/lib/w3.js"></script>
-<script>
-w3.includeHTML();
-</script>
-
+  Düzeltilmiş HTML
+  <script src="https://www.w3schools.com/lib/w3.js"></script>
+  <script>w3.includeHTML();</script>
 </body>
 </html>
