--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head w3-include-html="head.html"></head>
-<body>
+<body data-metin="ana">
   Düzeltilmiş HTML
   <script src="https://www.w3schools.com/lib/w3.js"></script>
   <script>w3.includeHTML();</script>
