index.html düzeltildi.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html>
 <head w3-include-html="head.html"></head>
 <body data-metin="ana">
-  Düzeltilmiş HTML
+  <div data-gnl="1 1p" w3-include-html="header.html"></div>
   <script src="https://www.w3schools.com/lib/w3.js"></script>
   <script>w3.includeHTML();</script>
 </body>
