--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head w3-include-html="head.html"></head>
+<head w3-include-html="/temel/head.html"></head>
 <body data-metin="ana">
-  <div data-gnl="1 1p" w3-include-html="header.html"></div>
+  <div data-gnl="1 1p" w3-include-html="/temel/header.html"></div>
+  Düzeltildi.
+  <div data-gnl="1 1p" w3-include-html="/temel/foot.html"></div>
   <script src="https://www.w3schools.com/lib/w3.js"></script>
   <script>w3.includeHTML();</script>
 </body>
